<resources>
    <string name="app_name">HomeScreen</string>
    <string name="data_diri">Data Diri</string>
    <string name="nama">Nama</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="no_telp">No. Telp</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="register" />
    <string name="perempuan">Perempuan</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="gender">gender</string>
    <string name="riwayat_penyakit">Riwayat Penyakit</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="Tolong_Lansia">TolongLansia</string>
    <string name="title_activity_elder_maps">ElderMapsActivity</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>