<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wavebg"
    tools:context=".register_caregiver">


    <TextView
        android:id="@+id/sapa"
        android:layout_width="153dp"
        android:layout_height="46dp"

        android:fontFamily="@font/poppins_medium"
        android:text="@string/data_diri"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_surface"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="303dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="?attr/listPreferredItemPaddingStart"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        android:paddingVertical="5dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FF9800"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sapa"
        tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="?attr/listPreferredItemPaddingStart"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#5C5858"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security"
        android:drawablePadding="?attr/listPreferredItemPaddingStart"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#5C5858"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonmail"
        tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="?attr/listPreferredItemPaddingStart"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/no_telp"
        android:inputType="textPhonetic"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#5C5858"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="?attr/listPreferredItemPaddingStart"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/alamat"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#5C5858"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        tools:ignore="LabelFor,TextContrastCheck" />


    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/calendar"
        android:drawablePadding="?attr/listPreferredItemPaddingStart"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/tanggal_lahir"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#5C5858"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        tools:ignore="LabelFor,TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/btn_bg"
        android:elegantTextHeight="false"
        android:elevation="1000dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="login"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="@drawable/backbutton_register" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/radio_bg"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:contentDescription="@string/gender"
            app:srcCompat="@drawable/gender2"
            tools:ignore="ImageContrastCheck" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="266dp"
            android:layout_height="104dp"
            android:layout_marginStart="45dp"
            android:dividerPadding="50dp"
            android:padding="5dp"
            android:paddingBottom="10dp">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@android:drawable/btn_radio"
                android:drawablePadding="30dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/laki_laki"
                android:textColor="@color/orange"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@android:drawable/btn_radio"
                android:drawablePadding="30dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/perempuan"
                android:textColor="@color/orange"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </RadioGroup>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>